<resources>
    <string name="app_name">Flickr</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_about">About</string>
    <string name="prefs_theme_key">theme</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
