<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/grp1" android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/title_search" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/icons8_heart_outline_50"
            android:title="@string/title_favourites" />
    </group>

    <group android:id="@+id/grp2" android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/icons8_about_50"
            android:title="@string/title_about" />
    </group>
</menu>